# pycnv

./: CHANGELOG.rst  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
ci/: env.yml
pycnv/: CHANGELOG  CHANGELOG.rst  __init__.py  pycnv.py  pycnv_obsolete.py  pycnv_sum_folder.py
pycnv/gui/: pycnv_gui.py
pycnv/rules/: standard_names.yaml
pycnv/stations/: csv_to_yaml.py  iow_stations.csv  iow_stations.yaml  stations.yaml
pycnv/test/: make_netcdf.py  plot_baltic_stations.py  plot_baltic_test_regions.py
test/: bottle_example.py  conftest.py  test_bottle.py  test_plots.py  test_utils.py
test/bottlefile_test_data/: V0001F02.btl  V0020F02.btl  V0021F02.btl  V0022F01.btl  V0023F02.btl  V0024F01.btl  V0025F01.btl  V0026F01.btl  V0027F01.btl  V0028F01.btl  V0029F01.btl  V0030F01.btl
